@@ -8,7 +8,6 @@ import com.example.subject.service.SubjectService;
 import com.example.user.controllers.StudentsController;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.exc.MismatchedInputException;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -18,11 +17,8 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 
 import java.util.*;
 
@@ -60,7 +56,7 @@ class CatalogStudentsControllerTest {
                 2,
                 4,
                 "123FAKE92929",
-                new HashSet<>(Arrays.asList(new Subject())));
+                new HashSet<>(List.of(new Subject())));
         grade = new Grade( 7, subject, "12.12.2012");
 
         student.addGrade(grade);
@@ -71,8 +67,11 @@ class CatalogStudentsControllerTest {
     void tearDown() {
     }
     @Test
-    void getAllStudentsTest() throws Exception {
+    void whenGetAllStudents_thenReturnExistingStudents() throws Exception {
+        // Arrange
         when(studentsService.getStudentsByParams(Map.of())).thenReturn(students);
+
+        // Act
         MvcResult studentResult = mvc.perform(get("/api/v1/students")
                         .accept(MediaType.APPLICATION_JSON))
                 .andDo(print())
@@ -80,12 +79,16 @@ class CatalogStudentsControllerTest {
                 .andReturn();
         List<Student> studentResponse = objectMapper.readValue(studentResult.getResponse().getContentAsString(), new TypeReference<>() {});
 
+        // Assert
         assertNotNull(studentResponse);
         assertEquals(students, studentResponse);
     }
     @Test
-    void createStudentTest() throws Exception {
+    void givenValidStudent_whenSaveStudent_thenReturnSameStudent() throws Exception {
+        // Arrange
         when(studentsService.saveStudent(any(Student.class))).thenReturn(student);
+
+        // Act
         MvcResult studentResult = mvc.perform(post("/api/v1/students")
                         .content(asJsonString(student))
                         .contentType(MediaType.APPLICATION_JSON)
@@ -93,40 +96,53 @@ class CatalogStudentsControllerTest {
                 .andDo(print())
                 .andExpect(status().isCreated())
                 .andReturn();
-
         Student studentCreated = objectMapper.readValue(studentResult.getResponse().getContentAsString(), Student.class);
+
+        // Assert
         assertNotNull(studentCreated);
         assertEquals(student,studentCreated);
 
     }
     @Test
-    void getStudentByIdTest() throws Exception {
+    void givenValidStudentId_whenGetStudentById_thenReturnsWantedStudent() throws Exception {
+        // Arrange
         UUID id = student.getId();
         when(studentsService.getStudentById(id)).thenReturn(student);
 
+        // Act
         // Test scenario where student is found
         MvcResult studentResult = mvc.perform(get("/api/v1/students/{id}", id.toString()))
                 .andExpect(status().isOk())
                 .andReturn();
         Student studentCreated = objectMapper.readValue(studentResult.getResponse().getContentAsString(), Student.class);
+
+        // Assert
         assertNotNull(studentCreated);
         assertEquals(student, studentCreated);
+    }
 
+    @Test
+    void givenInvalidStudentId_whenGetStudentById_thenReturnsStatusNotFound() throws Exception {
         // Test scenario where student is not found
+        // Arrange
+        UUID id = student.getId();
         when(studentsService.getStudentById(id)).thenReturn(null);
+        // Act
         mvc.perform(get("/api/v1/students/{id}", id.toString()))
+                // Assert
                 .andExpect(status().isNotFound());
     }
 
-
-    /* In StudentsController la ce ati mutat voi nu exista acest get, am vazut ca e doar in Catalog  - am mutat si getu asta */
-
+    // givenValidStudentId_whenGetStudentGrades_thenReturnsStudentGrades()
     @Test
-    void getStudentByIdGradesTest() throws Exception {
+    void givenValidStudentId_whenGetStudentGrades_thenReturnsStudentGrades() throws Exception {
         // Mock the studentsService.getStudentById() method to return a non-null Student object
+        // Arrange
         when(studentsService.getStudentById(student.getId())).thenReturn(student);
 
         // Test the case where the Student object is present
+        // Act
+
         MvcResult gradesList = mvc.perform(get("/api/v1/students/{id}/grades",  student.getId(), subject)
                         .accept(MediaType.APPLICATION_JSON))
                 .andDo(print())
@@ -134,6 +150,7 @@ class CatalogStudentsControllerTest {
                 .andReturn();
         List<Grade> gradesResponse = objectMapper.readValue(gradesList.getResponse().getContentAsString(), new TypeReference<>() {});
 
+        // Assert
         assertNotNull(gradesResponse);
 
         long gradesIds = 0;
@@ -144,11 +161,15 @@ class CatalogStudentsControllerTest {
             gradesResponseIds += grade2.getId().getLeastSignificantBits();
 
         assertEquals(gradesIds, gradesResponseIds);
-
+    }
+    @Test
+    void givenNullStudent_whenGetStudentGrades_thenReturnsNull() throws Exception {
         // Mock the studentsService.getStudentById() method to return a null object
+        // Arrange
         when(studentsService.getStudentById(student.getId())).thenReturn(null);
 
         // Test the case where the Student object is not present
+        // Act
         MvcResult nullStudentResult = mvc.perform(get("/api/v1/students/{id}/grades",  student.getId(), subject)
                         .accept(MediaType.APPLICATION_JSON))
                 .andDo(print())
@@ -157,28 +178,30 @@ class CatalogStudentsControllerTest {
 
         // Check that the response entity is null
         String nullStudentResponse = nullStudentResult.getResponse().getContentAsString();
+
+        // Assert
         assertTrue(nullStudentResponse.isEmpty());
     }
 
-
-    /* Nici acest GET nu exista, exista doar put / delete cu acest endpoint  - solved */
     @Test
-    void getStudentByIdGetGradeByIdAPI() throws Exception {
+    void givenValidStudentAndGradeIds_whenGetStudentGradeById_thenReturnsWantedGrade() throws Exception {
+        // Arrange
         when(studentsService.getStudentById(student.getId())).thenReturn(student);
         when(studentsService.getGradeById(student.getId(), grade.getId())).thenReturn(grade);
 
+        // Act
         MvcResult gradesList = mvc.perform(get("/api/v1/students/{id}/grades/{gradeId}",  student.getId().toString(),  grade.getId()))
                 .andExpect(status().isOk())
                 .andReturn();
-
         Grade gradeResponse = objectMapper.readValue(gradesList.getResponse().getContentAsString(),Grade.class);
 
+        // Assert
         assertNotNull(gradeResponse);
         assertEquals(gradeResponse.getId(),grade.getId());
     }
 
     @Test
-    void TestGetGradeByIdReturnsGradeWhenStudentAndGradeExist() throws Exception {
+    void givenValidStudentAndGrade_whenGetGradeById_thenReturnsSameGrade() throws Exception {
         // Arrange
         UUID studentId = student.getId();
         UUID gradeId = grade.getId();
@@ -198,7 +221,7 @@ class CatalogStudentsControllerTest {
     }
 
     @Test
-    void TestGetGradeByIdReturnsNotFoundWhenStudentDoesNotExist() throws Exception {
+    void givenInvalidStudentId_whenGetStudentGradeById_thenReturnsNotFound() throws Exception {
         // Arrange
         UUID studentId = UUID.randomUUID();
         UUID gradeId = grade.getId();
@@ -215,7 +238,7 @@ class CatalogStudentsControllerTest {
     }
 
     @Test
-    void getGradeByIdReturnsNotFoundWhenGradeDoesNotExist() throws Exception {
+    void givenInvalidGradeId_whenGetStudentGradeById_thenReturnsNotFound() throws Exception {
         // Arrange
         UUID studentId = student.getId();
         UUID gradeId = UUID.randomUUID();
@@ -233,7 +256,7 @@ class CatalogStudentsControllerTest {
     }
 
     @Test
-    void TestGetGradeByIdReturnsNotFoundWhenStudentAndGradeDoNotExist() throws Exception {
+    void givenInvalidStudentAndGradeIds_whenGetStudentGradeById_thenReturnsNotFound() throws Exception {
         // Arrange
         UUID studentId = UUID.randomUUID();
         UUID gradeId = UUID.randomUUID();
@@ -250,68 +273,86 @@ class CatalogStudentsControllerTest {
         assertEquals("", content);
     }
 
-//    @Test
-//    void createGradeTest() throws Exception {
-//        //GradeId pus in postGradeResult inainte ca metoda Student.addGrade() sa aloce un ID.
-//        Grade gradeForPost = new Grade(10, subject, "12.12.2012");
-//        gradeForPost.setId(UUID.randomUUID());
-//
-//        // Non-existent student ID
-//        UUID nonExistentStudentId = UUID.randomUUID();
-//        when(studentsService.getStudentById(nonExistentStudentId)).thenReturn(null);
-//
-//        when(studentsService.getStudentById(student.getId())).thenReturn(student);
-//        when(studentsService.addGrade(eq(student.getId()), any(Grade.class))).thenAnswer((Answer<Grade>) invocationOnMock -> {
-//            student.addGrade(gradeForPost);
-//            return gradeForPost;
-//        });
-//
-//        // Posting grade for a non-existent student
-//        MvcResult postGradeResultNotFound = mvc.perform(post("/api/v1/students/{id}/grades", nonExistentStudentId)
-//                        .content(asJsonString(gradeForPost))
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//                .andDo(print())
-//                .andExpect(status().isNotFound())
-//                .andReturn();
-//
-//        // Posting grade for an existing student
-//        MvcResult postGradeResult = mvc.perform(post("/api/v1/students/{id}/grades", student.getId())
-//                        .content(asJsonString(gradeForPost))
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//                .andDo(print())
-//                .andExpect(status().isCreated())
-//                .andReturn();
-//
-//        Grade gradeResponse = objectMapper.readValue(postGradeResult.getResponse().getContentAsString(), Grade.class);
-//
-//        assertNotNull(gradeResponse);
-//        assertEquals(gradeResponse.getSubject(), gradeForPost.getSubject());
-//        assertEquals(gradeResponse.getValue(), gradeForPost.getValue());
-//
-//        // given null grade
-//        mvc.perform(post("/api/v1/students/{id}/grades", student.getId())
-//                        .content(asJsonString(null))
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//                // then
-//                .andExpect(status().isBadRequest());
-//
-//        assertEquals(2, student.getGrades().size());
-//    }
-
-
-
     @Test
-    void deleteGradeTest() throws Exception {
-
+    void givenGrade_whenSaveGrade_thenReturnsSameGrade() throws Exception {
+        // Arrange
+        Subject subjectForPost = new Subject(subject, 2, 1, 3, null, null, null);
+        Grade gradeForPost = new Grade(10, subject, "12.12.2003");
+        gradeForPost.setId(UUID.randomUUID());
         when(studentsService.getStudentById(student.getId())).thenReturn(student);
-        when(studentsService.deleteGrade(student.getId(), grade.getId())).thenAnswer((Answer<Grade>) invocationOnMock -> {
-            grade.setDeleted();
-            return grade;
+        when(subjectService.getSubjectByTitle(grade.getSubject())).thenReturn(Optional.of(subjectForPost));
+
+        when(studentsService.addGrade(eq(student.getId()), any(Grade.class))).thenAnswer((Answer<Grade>) invocationOnMock -> {
+            student.addGrade(gradeForPost);
+            return gradeForPost;
         });
 
+        // Act
+        // Posting grade for an existing student
+        MvcResult postGradeResult = mvc.perform(post("/api/v1/students/{id}/grades", student.getId())
+                        .content(asJsonString(gradeForPost))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isCreated())
+                .andReturn();
+
+        Grade gradeResponse = objectMapper.readValue(postGradeResult.getResponse().getContentAsString(), Grade.class);
+
+        // Assert
+        assertNotNull(gradeResponse);
+        assertEquals(gradeResponse.getSubject(), gradeForPost.getSubject());
+        assertEquals(gradeResponse.getValue(), gradeForPost.getValue());
+    }
+    @Test
+    void givenGradeAndInvalidStudentId_whenSaveGrade_thenReturnsNotFound() throws Exception {
+        // Arrange
+        // Non-existent student ID
+        UUID nonExistentStudentId = UUID.randomUUID();
+        when(studentsService.getStudentById(nonExistentStudentId)).thenReturn(null);
+        Grade gradeForPost = new Grade(10, subject, "12.12.2003");
+        gradeForPost.setId(UUID.randomUUID());
+
+        // Posting grade for a non-existent student
+        // Act
+        mvc.perform(post("/api/v1/students/{id}/grades", nonExistentStudentId)
+                        .content(asJsonString(gradeForPost))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                // Assert
+                .andExpect(status().isNotFound())
+                .andReturn();
+    }
+
+    @Test
+    void givenNullGrade_whenSaveGrade_thenReturnsNotFound() throws Exception {
+        // Arrange
+        Grade gradeForPost = new Grade(10, subject, "12.12.2003");
+        gradeForPost.setId(UUID.randomUUID());
+        when(studentsService.getStudentById(student.getId())).thenReturn(student);
+        when(studentsService.addGrade(eq(student.getId()), any(Grade.class))).thenAnswer((Answer<Grade>) invocationOnMock -> {
+            student.addGrade(gradeForPost);
+            return gradeForPost;
+        });
+        // Act
+        mvc.perform(post("/api/v1/students/{id}/grades", student.getId())
+                        .content(asJsonString(null))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest());
+
+        // Assert
+        assertEquals(1, student.getGrades().size());
+    }
+    @Test
+    void givenGrade_whenDeleteGrade_thenReturnGradeDeleted() throws Exception {
+
+        // Arrange
+        when(studentsService.getStudentById(student.getId())).thenReturn(student);
+        when(studentsService.deleteGrade(student.getId(), grade.getId())).thenAnswer((Answer<Grade>) invocationOnMock -> grade.setDeleted());
+
+        // Act
         MvcResult deleteGradeResult = mvc.perform(delete("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
                         .content(asJsonString(grade))
                         .contentType(MediaType.APPLICATION_JSON)
@@ -322,17 +363,20 @@ class CatalogStudentsControllerTest {
 
         Grade gradeResponse = objectMapper.readValue(deleteGradeResult.getResponse().getContentAsString(), Grade.class);
 
+        // Assert
         assertNotNull(gradeResponse);
         assertEquals(gradeResponse.getId(), grade.getId());
-        assertTrue(grade.isDeleted());
+        assertTrue(gradeResponse.getIsDeleted());
     }
 
     @Test
-    void deleteGradeAltTest() throws Exception {
+    void givenGrade_whenDeleteGrade_thenReturnNotFound() throws Exception {
 
+        // Arrange
         when(studentsService.getStudentById(student.getId())).thenReturn(student);
         when(studentsService.deleteGrade(student.getId(), grade.getId())).thenReturn(null);
 
+        // Act
         MvcResult deleteGradeResult = mvc.perform(delete("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
                         .content(asJsonString(grade))
                         .contentType(MediaType.APPLICATION_JSON)
@@ -341,15 +385,18 @@ class CatalogStudentsControllerTest {
                 .andExpect(status().isNotFound())
                 .andReturn();
 
-        assertEquals(deleteGradeResult.getResponse().getContentAsString(), "");
+        // Assert
+        assertEquals( "",deleteGradeResult.getResponse().getContentAsString());
+
     }
 
     @Test
-    void deleteNonExistentStudentTest() throws Exception {
+    void givenInvalidStudentId_whenDeleteStudent_thenReturnsNotFound() throws Exception {
+        // Arrange
         UUID nonExistentStudentId = UUID.randomUUID();
-
         when(studentsService.getStudentById(nonExistentStudentId)).thenReturn(null);
 
+        // Act
         MvcResult deleteResult = mvc.perform(delete("/api/v1/students/{id}", nonExistentStudentId)
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON))
@@ -357,15 +404,18 @@ class CatalogStudentsControllerTest {
                 .andExpect(status().isNotFound())
                 .andReturn();
 
+        // Assert
         assertEquals("", deleteResult.getResponse().getContentAsString());
     }
 
 
     @Test
-    void deleteStudentTest() throws Exception {
+    void givenValidStudentId_whenDeleteStudent_thenReturnsStudentDeleted() throws Exception {
+        // Arrange
         when(studentsService.getStudentById(student.getId())).thenReturn(student);
         when(studentsService.deleteStudent(student.getId())).thenAnswer((Answer<Student>) invocationOnMock -> (Student) student.setIsDeleted(true));
 
+        // Act
         MvcResult deleteStudentResult = mvc.perform(delete("/api/v1/students/{id}", student.getId())
                         .content(asJsonString(student))
                         .contentType(MediaType.APPLICATION_JSON)
@@ -376,19 +426,18 @@ class CatalogStudentsControllerTest {
 
         Student studentDeleted = objectMapper.readValue(deleteStudentResult.getResponse().getContentAsString(), Student.class);
 
+        // Assert
         assertNotNull(studentDeleted);
         assertTrue(studentDeleted.getIsDeleted());
     }
-
-    /* Aici am vorbit cu tudor ca va trebui schimbata modul de a afisa data si vedem dupa aceea */
     @Test
-    void updateGradeValueTest() throws Exception {
-        // Setup
+    void givenValidStudentAndGrade_whenUpdateGrade_thenReturnUpdatedGrade() throws Exception {
+        // Arrange
         when(studentsService.getStudentById(student.getId())).thenReturn(student);
         when(studentsService.getGradeById(student.getId(), grade.getId())).thenReturn(grade);
 
         String evalDateTest = "12.12.2012";
-        Integer valueTest = 3;
+        int valueTest = 3;
 
         when(studentsService.updateGrade(eq(student.getId()), any(Integer.class), anyString(), eq(grade.getId()))).thenAnswer((Answer<Grade>) invocationOnMock -> {
             Grade toUpdate = student.getGradeById(grade.getId());
@@ -396,52 +445,63 @@ class CatalogStudentsControllerTest {
             toUpdate.setValue(valueTest);
             return toUpdate;
         });
-            // Test case 1: when student and grade are present
-            MvcResult updateGradeResult = mvc.perform(put("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
-                            .param("value", asJsonString(valueTest))
-                            .param("evaluationDateMs", asJsonString(evalDateTest))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .accept(MediaType.APPLICATION_JSON))
-                    .andDo(print())
-                    .andExpect(status().isOk())
-                    .andReturn();
+        // Act
+        // Test case 1: when student and grade are present
+        MvcResult updateGradeResult = mvc.perform(put("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
+                        .param("value", asJsonString(valueTest))
+                        .param("evaluationDateMs", asJsonString(evalDateTest))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andReturn();
         Grade gradeResponse = objectMapper.readValue(updateGradeResult.getResponse().getContentAsString(), Grade.class);
 
+        // Assert
         assertNotNull(gradeResponse);
-        // assertEquals(gradeResponse.getId(), grade.getId());
-        // assertEquals("12.12.2002", gradeResponse.getEvaluationDate());
-
-        // Test case 2: when student is not present
-        when(studentsService.getStudentById(student.getId())).thenReturn(null);
-
-        updateGradeResult = mvc.perform(put("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
-                        .param("evaluationDateMs", asJsonString(evalDateTest))
-                        .param("value", asJsonString(valueTest))
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
-                .andExpect(status().isNotFound())
-                .andReturn();
-
-        assertEquals("", updateGradeResult.getResponse().getContentAsString());
-
-        // Test case 3: when grade is not present
-        when(studentsService.getStudentById(student.getId())).thenReturn(student);
-        when(studentsService.getGradeById(student.getId(), grade.getId())).thenReturn(null);
-
-        updateGradeResult = mvc.perform(put("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
-                        .param("evaluationDateMs", asJsonString(evalDateTest))
-                        .param("value", asJsonString(valueTest))
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
-                .andExpect(status().isNotFound())
-                .andReturn();
-
-        assertEquals("", updateGradeResult.getResponse().getContentAsString());
     }
 
+    @Test
+    void givenInvalidStudent_whenUpdateGrade_thenReturnsNotFound() throws Exception {
+        // Test case 2: when student is not present
+        // Arrange
+        when(studentsService.getStudentById(student.getId())).thenReturn(null);
+        Date evalDateTest = new Date();
+        Integer valueTest = 3;
+        // Act
+        MvcResult updateGradeResult = mvc.perform(put("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
+                        .param("evaluationDateMs", asJsonString(evalDateTest))
+                        .param("value", asJsonString(valueTest))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isNotFound())
+                .andReturn();
 
+        // Assert
+        assertEquals("", updateGradeResult.getResponse().getContentAsString());
+    }
+    @Test
+    void givenInvalidGrade_whenUpdateGrade_thenReturnsNotFound() throws Exception {
+        // Test case 3: when grade is not present
+        // Arrange
+        when(studentsService.getStudentById(student.getId())).thenReturn(student);
+        when(studentsService.getGradeById(student.getId(), grade.getId())).thenReturn(null);
+        Date evalDateTest = new Date();
+        Integer valueTest = 3;
+        // Act
+        MvcResult updateGradeResult = mvc.perform(put("/api/v1/students/{id}/grades/{gradeId}", student.getId(), grade.getId())
+                        .param("evaluationDateMs", asJsonString(evalDateTest))
+                        .param("value", asJsonString(valueTest))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isNotFound())
+                .andReturn();
+
+        // Assert
+        assertEquals("", updateGradeResult.getResponse().getContentAsString());
+    }
     private static String asJsonString(final Object obj) {
         try {
             return new ObjectMapper().writeValueAsString(obj);
